--- a/drivers/video/msm/Kconfig
+++ b/drivers/video/msm/Kconfig
@@ -111,6 +111,11 @@ config FB_MSM_TVOUT
 	bool
 	default n
 
+config FB_MSM_MDDI_RENESAS_R61408_WVGA
+	bool
+	select FB_MSM_MDDI
+	default n
+
 config FB_MSM_MDDI_TOSHIBA_COMMON
 	bool
 	select FB_MSM_MDDI
@@ -355,6 +360,7 @@ config FB_MSM_SAGA_PANEL
 	depends on FB_MSM_LCDC_HW && MACH_SAGA
 	bool "LCDC Saga WVGA Panels"
 	select FB_MSM_LCDC_SONY_WVGA
+        select FB_MSM_MDDI_RENESAS_R61408_WVGA
 	---help---
 	  Support for Saga WVGA (800x480) panels
 
@@ -476,10 +482,10 @@ config FB_MSM_MDDI_PANEL_AUTO_DETECT
 config FB_MSM_LCDC_PANEL_AUTO_DETECT
 	bool "LCDC Panel Auto Detect"
 	select FB_MSM_LCDC_AUTO_DETECT
-	select FB_MSM_LCDC_SAMSUNG_WSVGA
-	select FB_MSM_LCDC_AUO_WVGA
-	select FB_MSM_LCDC_NT35582_WVGA
-	select FB_MSM_LCDC_SAMSUNG_OLED_PT
+        select FB_MSM_LCDC_SONY_WVGA
+        select FB_MSM_LCDC_SAMSUNG_TL2796A_WVGA
+        select FB_MSM_LCDC_SAMSUNG_S6E63M0_WVGA
+	select FB_MSM_LCDC_SPADE_WVGA
 	---help---
 	  Support for LCDC panel auto detect
 
