--- a/arch/arm/configs/saga_andromadus_defconfig
+++ b/arch/arm/configs/saga_andromadus_defconfig
@@ -398,6 +398,7 @@ CONFIG_MSM_RPC_OEM_RAPI=y
 CONFIG_MSM_RPCSERVER_HANDSET=y
 CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_SERVER is not set
+# CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
@@ -1979,15 +1980,16 @@ CONFIG_FB_MSM_TRIPLE_BUFFER=y
 # CONFIG_FB_MSM_MDP31 is not set
 CONFIG_FB_MSM_MDP40=y
 # CONFIG_FB_MSM_EBI2 is not set
-# CONFIG_FB_MSM_MDDI is not set
+CONFIG_FB_MSM_MDDI=y
 # CONFIG_FB_MSM_MIPI_DSI is not set
 # CONFIG_FB_MSM_EXTMDDI is not set
+CONFIG_FB_MSM_MDDI_RENESAS_R61408_WVGA=y
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON_VGA is not set
 # CONFIG_FB_MSM_MDDI_ORISE is not set
 # CONFIG_FB_MSM_MDDI_QUICKVX is not set
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
-# CONFIG_FB_MSM_LCDC_AUTO_DETECT is not set
+CONFIG_FB_MSM_LCDC_AUTO_DETECT=y
 CONFIG_FB_MSM_LCDC_PANEL=y
 # CONFIG_FB_MSM_MIPI_DSI_TOSHIBA is not set
 # CONFIG_FB_MSM_MIPI_DSI_RENESAS is not set
@@ -1996,9 +1998,9 @@ CONFIG_FB_MSM_LCDC_PANEL=y
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
 CONFIG_FB_MSM_LCDC_SONY_WVGA=y
-# CONFIG_FB_MSM_LCDC_SPADE_WVGA is not set
-# CONFIG_FB_MSM_LCDC_SAMSUNG_TL2796A_WVGA is not set
-# CONFIG_FB_MSM_LCDC_SAMSUNG_S6E63M0_WVGA is not set
+CONFIG_FB_MSM_LCDC_SPADE_WVGA=y
+CONFIG_FB_MSM_LCDC_SAMSUNG_TL2796A_WVGA=y
+CONFIG_FB_MSM_LCDC_SAMSUNG_S6E63M0_WVGA=y
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA is not set
 # CONFIG_FB_MSM_LCDC_CHIMEI_WXGA is not set
@@ -2022,7 +2024,7 @@ CONFIG_FB_MSM_LCDC_SONY_WVGA=y
 # CONFIG_FB_MSM_OVERLAY0_WRITEBACK is not set
 # CONFIG_FB_MSM_OVERLAY1_WRITEBACK is not set
 # CONFIG_FB_MSM_WRITEBACK_MSM_PANEL is not set
-CONFIG_FB_MSM_SAGA_PANEL=y
+# CONFIG_FB_MSM_SAGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_CHIMEI_WXGA_PANEL is not set
@@ -2036,7 +2038,7 @@ CONFIG_FB_MSM_SAGA_PANEL=y
 # CONFIG_FB_MSM_TRY_MDDI_CATCH_LCDC_PRISM is not set
 # CONFIG_FB_MSM_MIPI_PANEL_DETECT is not set
 # CONFIG_FB_MSM_MDDI_PANEL_AUTO_DETECT is not set
-# CONFIG_FB_MSM_LCDC_PANEL_AUTO_DETECT is not set
+CONFIG_FB_MSM_LCDC_PANEL_AUTO_DETECT=y
 # CONFIG_FB_MSM_LCDC_MIPI_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_MDDI_PRISM_WVGA is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_WVGA_PORTRAIT is not set
