--- a/arch/arm/configs/vision_andromadus_defconfig
+++ b/arch/arm/configs/vision_andromadus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.16 Kernel Configuration
+# Linux/arm 3.0.41 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -408,9 +408,9 @@ CONFIG_ACPUCLOCK_OVERCLOCKING=y
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
-# CONFIG_MSM7KV2_AUDIO is not set
-CONFIG_MSM7KV2_1X_AUDIO=y
-CONFIG_MSM_ADSP_REPORT_EVENTS=y
+CONFIG_MSM7KV2_AUDIO=y
+# CONFIG_MSM7KV2_1X_AUDIO is not set
+# CONFIG_MSM_ADSP_REPORT_EVENTS is not set
 CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=m
