Update Spade defconfig

--- a/arch/arm/configs/spade_defconfig
+++ b/arch/arm/configs/spade_defconfig
@@ -44,7 +44,7 @@ CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_LZMA is not set
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-# CONFIG_SWAP is not set
+CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
@@ -131,11 +131,13 @@ CONFIG_PERF_USE_VMALLOC=y
 # CONFIG_PERF_EVENTS is not set
 # CONFIG_PERF_COUNTERS is not set
 CONFIG_VM_EVENT_COUNTERS=y
+CONFIG_SLUB_DEBUG=y
 CONFIG_COMPAT_BRK=y
-CONFIG_SLAB=y
-# CONFIG_SLUB is not set
+# CONFIG_SLAB is not set
+CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 # CONFIG_PROFILING is not set
+CONFIG_TRACEPOINTS=y
 CONFIG_HAVE_OPROFILE=y
 # CONFIG_KPROBES is not set
 CONFIG_HAVE_KPROBES=y
@@ -171,9 +173,10 @@ CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_CFQ is not set
-# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_BFQ is not set
+CONFIG_DEFAULT_SIO=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="deadline"
+CONFIG_DEFAULT_IOSCHED="sio"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -990,6 +993,7 @@ CONFIG_NET_SCH_FIFO=y
 # Network testing
 #
 # CONFIG_NET_PKTGEN is not set
+# CONFIG_NET_DROP_MONITOR is not set
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
@@ -1983,12 +1987,13 @@ CONFIG_FB_MSM_MDP40=y
 # CONFIG_FB_MSM_MDDI is not set
 # CONFIG_FB_MSM_MIPI_DSI is not set
 # CONFIG_FB_MSM_EXTMDDI is not set
+# CONFIG_FB_MSM_MDDI_RENESAS_R61408_WVGA is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON_VGA is not set
 # CONFIG_FB_MSM_MDDI_ORISE is not set
 # CONFIG_FB_MSM_MDDI_QUICKVX is not set
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
-# CONFIG_FB_MSM_LCDC_AUTO_DETECT is not set
+CONFIG_FB_MSM_LCDC_AUTO_DETECT=y
 CONFIG_FB_MSM_LCDC_PANEL=y
 # CONFIG_FB_MSM_MIPI_DSI_TOSHIBA is not set
 # CONFIG_FB_MSM_MIPI_DSI_RENESAS is not set
@@ -1996,10 +2001,10 @@ CONFIG_FB_MSM_LCDC_PANEL=y
 # CONFIG_FB_MSM_MIPI_DSI_NOVATEK is not set
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
-# CONFIG_FB_MSM_LCDC_SONY_WVGA is not set
+CONFIG_FB_MSM_LCDC_SONY_WVGA=y
 CONFIG_FB_MSM_LCDC_SPADE_WVGA=y
-# CONFIG_FB_MSM_LCDC_SAMSUNG_TL2796A_WVGA is not set
-# CONFIG_FB_MSM_LCDC_SAMSUNG_S6E63M0_WVGA is not set
+CONFIG_FB_MSM_LCDC_SAMSUNG_TL2796A_WVGA=y	
+CONFIG_FB_MSM_LCDC_SAMSUNG_S6E63M0_WVGA=y
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA is not set
 # CONFIG_FB_MSM_LCDC_CHIMEI_WXGA is not set
@@ -2023,7 +2028,7 @@ CONFIG_FB_MSM_LCDC_SPADE_WVGA=y
 # CONFIG_FB_MSM_OVERLAY0_WRITEBACK is not set
 # CONFIG_FB_MSM_OVERLAY1_WRITEBACK is not set
 # CONFIG_FB_MSM_WRITEBACK_MSM_PANEL is not set
-CONFIG_FB_MSM_SPADE_PANEL=y
+# CONFIG_FB_MSM_VISION_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_CHIMEI_WXGA_PANEL is not set
@@ -2037,7 +2042,7 @@ CONFIG_FB_MSM_SPADE_PANEL=y
 # CONFIG_FB_MSM_TRY_MDDI_CATCH_LCDC_PRISM is not set
 # CONFIG_FB_MSM_MIPI_PANEL_DETECT is not set
 # CONFIG_FB_MSM_MDDI_PANEL_AUTO_DETECT is not set
-# CONFIG_FB_MSM_LCDC_PANEL_AUTO_DETECT is not set
+CONFIG_FB_MSM_LCDC_PANEL_AUTO_DETECT=y
 # CONFIG_FB_MSM_LCDC_MIPI_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_MDDI_PRISM_WVGA is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_WVGA_PORTRAIT is not set
@@ -2757,7 +2762,8 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_SCHEDSTATS is not set
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_OBJECTS is not set
-# CONFIG_DEBUG_SLAB is not set
+# CONFIG_SLUB_DEBUG_ON is not set
+# CONFIG_SLUB_STATS is not set
 # CONFIG_DEBUG_KMEMLEAK is not set
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_RT_MUTEXES is not set
@@ -2770,7 +2776,7 @@ CONFIG_TIMER_STATS=y
 # CONFIG_LOCK_STAT is not set
 # CONFIG_DEBUG_SPINLOCK_SLEEP is not set
 # CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
-# CONFIG_STACKTRACE is not set
+CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_DEBUG_KOBJECT is not set
 # CONFIG_DEBUG_HIGHMEM is not set
@@ -2797,9 +2803,28 @@ CONFIG_RCU_CPU_STALL_VERBOSE=y
 # CONFIG_LATENCYTOP is not set
 # CONFIG_SYSCTL_SYSCALL_CHECK is not set
 # CONFIG_DEBUG_PAGEALLOC is not set
+CONFIG_NOP_TRACER=y
 CONFIG_HAVE_FUNCTION_TRACER=y
+CONFIG_RING_BUFFER=y
+CONFIG_EVENT_TRACING=y
+CONFIG_EVENT_POWER_TRACING_DEPRECATED=y
+CONFIG_CONTEXT_SWITCH_TRACER=y
+CONFIG_TRACING=y
+CONFIG_GENERIC_TRACER=y
 CONFIG_TRACING_SUPPORT=y
-# CONFIG_FTRACE is not set
+CONFIG_FTRACE=y
+CONFIG_FUNCTION_TRACER=y
+# CONFIG_IRQSOFF_TRACER is not set
+# CONFIG_PREEMPT_TRACER is not set
+# CONFIG_SCHED_TRACER is not set
+CONFIG_BRANCH_PROFILE_NONE=y
+# CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
+# CONFIG_PROFILE_ALL_BRANCHES is not set
+# CONFIG_STACK_TRACER is not set
+# CONFIG_BLK_DEV_IO_TRACE is not set
+# CONFIG_FUNCTION_PROFILER is not set
+# CONFIG_FTRACE_STARTUP_TEST is not set
+# CONFIG_RING_BUFFER_BENCHMARK is not set
 # CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_SAMPLES is not set
@@ -2927,7 +2952,7 @@ CONFIG_CRYPTO_HW=y
 # CONFIG_CRYPTO_DEV_QCE is not set
 # CONFIG_CRYPTO_DEV_QCEDEV is not set
 # CONFIG_CRYPTO_DEV_OTA_CRYPTO is not set
-# CONFIG_BINARY_PRINTF is not set
+CONFIG_BINARY_PRINTF=y
 
 #
 # Library routines
